@@ -10,6 +10,7 @@
 
     Reporting & Availability:
     * 0051: Option for showing timeline directly in availability table...
+    * 0052: Visual colorization of availability according to levels...
 
     Livestatus:
     * 0023 FIX: table statehist: code cleanup / minor performance improvements...
